cmake_minimum_required (VERSION 3.8)

include_directories(./)
link_directories(./)

set(ENABEL_ENCRYPTION 0)
add_definitions(-DENABEL_ENCRYPTION=${ENABEL_ENCRYPTION})

aux_source_directory(. SRCS)
if (WIN32)
	if(${ENABEL_ENCRYPTION} EQUAL 0)
		add_executable (nsign ${SRCS})
	else()
		link_libraries("${CMAKE_CURRENT_SOURCE_DIR}/esw_enc/libcrypto.lib")
		add_library(libcrypto.lib INTERFACE IMPORTED)
		include_directories(./esw_enc/)
		aux_source_directory(esw_enc SUB_SRCS)
		message("SUB_SRCS=${SUB_SRCS}")
		add_executable (nsign ${SRCS} ${SUB_SRCS})
		target_link_libraries(nsign libcrypto.lib )
	endif()
	add_definitions(-DWIN32 -DNOCRYPT -D_CRT_SECURE_NO_WARNINGS)
elseif (UNIX)
	if(${ENABEL_ENCRYPTION} EQUAL 0)
		add_executable (nsign ${SRCS})
		target_link_libraries(nsign -ldl -lpthread)
	else()
		add_library(libcrypto.a INTERFACE IMPORTED)
		link_libraries("${CMAKE_CURRENT_SOURCE_DIR}/esw_enc/libcrypto.a")
		include_directories(./esw_enc/)
		aux_source_directory(esw_enc SUB_SRCS)
		add_executable (nsign ${SRCS} ${SUB_SRCS})
		target_link_libraries(nsign libcrypto.a -ldl -lpthread)
	endif()
endif ()

